--- a/Galerija.html
+++ b/Galerija.html
@@ -38,6 +38,8 @@
 		<li><a  style="text-decoration:underline;" href="Galerija.html">Galerija</a></li>
 	</ol>
 </div>
+<div class="tekst">
+	<span class="ff">Jedna slika vrijedi tisuću riječi, zar ne?</span></div>
 <div id="container">
     <div id="wrapper">
         <div class="slider-wrapper theme-default" >
